Update: Update mission page into popup ,align footer button  to center, fix timeline and budget dropdown spacing.
Closes- RH-77 RH-18 , author- Kuldeep Nageshwar

--- a/src/components/Mission/Mission.scss
+++ b/src/components/Mission/Mission.scss
@@ -9,7 +9,7 @@
 
 	.mission-container {
 		width: 100%;
-		max-width: 700px;
+		max-width: 620px;
 		margin-top: 50px;
 		margin-bottom: 50px;
 
@@ -38,7 +38,7 @@
 		}
 
 		.buttons {
-			justify-content: end;
+			justify-content: center;
 		}
 
 		.text-darkblue {
